test/negative/constructor_arity4.mli.expected

*******************************
********** Parsed file ********
*******************************
type t =
  | L of t * t 
  | E 
val f : t -> int[@@gospel
                  {| r = f a
    ensures
      match a with
      | L ((x,y)) -> x=y
|}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

type t =
| L of t * t 
| E 
  

val f : t -> int
(*@ r = f a
    ensures ...
     *)
File "constructor_arity4.mli", line 7, characters 8-17:
Error: Function L expects 2 arguments as opposed to 1
